--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,22 @@
 .app {
 	max-width: 1350px;
 	min-width: 340px;
-  display: flex;
+	display: flex;
 	flex-direction: column;
-  justify-content: center;
+	justify-content: center;
 	padding: 20px 30px;
 	font-size: 4rem;
-  background-color: #fff;
+	border-radius: 15px;
+	background-color: rgb(250, 250, 250);
+	border: 2px solid var(--contrastColor);
+	box-shadow: 0px 0px 25px -3px var(--contrastColor);
 }
 
+.app__title {
+	font-size: 2.5rem;
+	font-family: 'Press Start 2P', cursive;
+	text-transform: uppercase;
+	text-align: center;
+	padding: 40px 0;
+
+}
