--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -66,3 +66,10 @@ input {
 .form__item__btnAdd :active {
     transform: scale(0.9);
 }
+
+.form__error {
+	color: var(--errorColor);
+	font-weight: bold;
+	font-size: 3rem;
+	text-decoration-line:underline;
+}
