--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -1,4 +1,4 @@
-.tableContainer {
+.tblContainer {
 	margin-top: 50px;
 }
 
@@ -24,18 +24,26 @@ table {
 	border: 1px solid var(--tableBorder);
 }
 
+.btnsContainer {
+	display: flex;
+	justify-content: center;
+	transform: translateX(5px);
+}
+
 
 th {
 	padding: 20px 15px;
-	text-align: left;
+	text-align: center;
 	font-weight: 500;
 	font-size: 2rem;
 	color: var(--infoColor);
 	text-transform: uppercase;
 }
+
+
 td {
 	padding: 15px;
-	text-align: left;
+	text-align: center;
 	vertical-align: middle;
 	font-size: 1.5rem;
 	color: var(--infoColor);
