--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 	padding: 20px 30px;
 	font-size: 4rem;
 	border-radius: 15px;
-	background-color: rgb(250, 250, 250);
+	background-color:var(--bgColor);
 	border: 2px solid var(--contrastColor);
 	box-shadow: 0px 0px 15px -3px var(--contrastColor);
 }
