--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -40,10 +40,10 @@ input {
 
 .form__item__btnAdd {
 	display: inline-block;
-	width: 100%;
+	text-align: right;
+	width: 97%;
 }
    
-
 .form__item__btnAdd button {
 	transition: transform .2s ease-in
 }
@@ -53,10 +53,9 @@ input {
     background-color: var(--contrastColor);
     border: 2px solid black;
     border-radius: 5px;
-	position: relative;
-	left: 81%;
+	
+	padding: 15px;
 	width: 120px;
-	height: 40px;
     margin: 30px 0;
     font-family: 'Press Start 2P', cursive;
 }
