added display of categories in the function, whose task is to edit the selected record in the table.

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -71,6 +71,7 @@ input {
 	font-weight: bold;
 	font-size: 3rem;
 	text-decoration-line:underline;
+	font-family: 'Quicksand', sans-serif;
 }
 
 /* Spinner */
